# hvega

./: .gitignore  flake.nix  hvega.cabal
src/Graphics/Vega/: VegaLite.hs
tests/specs/axis/: axis1.vl  axis1c.vl  axis2.vl  axis2c.vl  axis3.vl  axis3c.vl  axis4.vl  axis4c.vl  axis5.vl  axis5c.vl  axis6.vl  axis6c.vl  axis7.vl  axis7c.vl  axis8.vl  axis8c.vl  axisOverlapGreedy.vl  axisOverlapNone.vl  axisOverlapParity.vl  axisstyleempty.vl  axisstyleemptyx.vl  axisstylex.vl  axisstylexastyle.vl  axisstylexy.vl  multiline.vl  responsiveHeight.vl  responsiveWidth.vl  singleline.vl  zorder.vl
tests/specs/color/: customContinuous.vl  customDiscrete.vl  defContinuous.vl  defNominal.vl  defOrdinal.vl  gamma1.vl  gamma2.vl  gamma3.vl  gamma4.vl  gamma5.vl  interp1.vl  interp2.vl  interp3.vl  interp4.vl  interp5.vl  interp6.vl  interp7.vl  namedContinuous1.vl  namedContinuous2.vl  namedContinuous3.vl  namedContinuous4.vl  scale1.vl  scale3.vl  scale4.vl  scale5.vl  scale6.vl  scale7.vl  scale8.vl
tests/specs/composite/: boxplot1.vl  boxplot2.vl  boxplot3.vl  boxplotnobox.vl  boxplotnomedian.vl  boxplotnooutliers.vl  boxplotnorule.vl  boxplotnoticks.vl  errorband1.vl  errorband1no.vl  errorband2.vl  errorband2no.vl  errorbar1.vl  errorbar2.vl  errorbar3.vl  errorbar3no.vl  errorbar4.vl  errorbar5.vl  errorbar6.vl  errorbar7.vl
tests/specs/conditional/: axisCondition1.vl  axisCondition2.vl  axisCondition3.vl  axisDateCondition1.vl  axisconditionlabeloffset.vl  bindScales1.vl  bindScales2.vl  markCondition1.vl  markCondition2.vl  selectionCondition1.vl  selectionCondition2.vl  selectionCondition3.vl  selectionCondition4.vl  selectionCondition5.vl  selectionHeatMap.vl
tests/specs/config/: axisCfg1.vl  breaklinecfg.vl  dark.vl  default.vl  fontCfg.vl  headerlabels.vl  mark1.vl  mark2.vl  padding.vl  paddingContent.vl  paddingNone.vl  paddingPad.vl  paddingPadding.vl  paddingResize.vl  paddingx.vl  paddingy.vl  titleCfg1.vl  titleCfg2.vl  titleCfg3.vl  vbTest.vl
tests/specs/data/: annotate1.vl  argmin_spaces.vl  bin1.vl  bin2.vl  bin3.vl  data1.vl  data10.vl  data4.vl  data5.vl  data6.vl  data7.vl  data8.vl  data9.vl  domain1.vl  domain2.vl  domain3.vl  filter1.vl  filter2.vl  flatten1.vl  fold1.vl  geodata1.vl  geodata2.vl  impute1.vl  impute2.vl  impute3.vl  impute4.vl  impute5.vl  impute6.vl  impute7.vl  impute8.vl  namedData1.vl  namedData2.vl  namedData3.vl  null1.vl  pivot1.vl  pivotDocs.vl  sample1.vl  sequence1.vl  sequence2.vl
tests/specs/encoding/: nullencoding.vl  strokedashgroup.vl  strokedashline.vl
tests/specs/fillstroke/: combined1.vl  combined2.vl  combined3.vl  default.vl  fill1.vl  fill2.vl  fill3.vl  fillopacity.vl  geo1.vl  geo2.vl  gradient1.vl  gradient2.vl  gradient3.vl  gradientr1.vl  gradientr2.vl  gradientr3.vl  hrounded.vl  stroke1.vl  stroke2.vl  stroke3.vl  strokedash1.vl  strokedash2.vl  strokedash3.vl  strokedash4.vl  strokedash5.vl  strokedash6.vl  strokedash7.vl  strokedash8.vl  strokedash9.vl  vrounded.vl
tests/specs/filter/: datedate.vl  datedatell.vl  datedateul.vl  datenumber.vl  datenumberll.vl  datenumberul.vl
tests/specs/geo/: choropleth1.vl  choropleth2.vl  defaultSize1.vl  defaultSize2.vl  dotMap1.vl  geo_constant_value.vl  graticule1.vl  graticule2.vl  graticule3.vl  graticule4.vl  linear1.vl  linear2.vl  linear3.vl  map1d.vl  mapComp1.vl  mapComp2.vl  mapComp3.vl  mapComp4.vl  scale1.vl  scribbleMap1.vl  scribbleMap2.vl  sphere1.vl  sphere2.vl  translate1.vl
tests/specs/hyperlink/: hyperlink1.vl  hyperlink2.vl  hyperlink3.vl
tests/specs/image/: image1.vl  image10.vl  image2.vl  image3.vl  image4.vl  image5.vl  image6.vl  image7.vl  image8.vl  image9.vl
tests/specs/interaction/: bindlegend.vl  bindlegend2.vl  bindlegendboth.vl  curhelp.vl  curpointer.vl  initinterval.vl  initintervalx.vl  initintervalxy.vl  initintervaly.vl  interaction1.vl  interaction2.vl  interaction3.vl  interaction4.vl  interaction5.vl  interaction6.vl  interaction7.vl  interaction8.vl  lookupSelection1.vl
tests/specs/legend/: corners1.vl  corners2.vl  disablelegend.vl  legend1.vl  legend10.vl  legend11.vl  legend11d.vl  legend2.vl  legend3.vl  legend4.vl  legend5.vl  legend6.vl  legend7.vl  legend8.vl  legend9.vl  limits1.vl  limits2.vl  limits3.vl
tests/specs/mark/: blendmode.vl  donutChart.vl  histogram_binned_no_x2.vl  pieChart.vl  pieChartWithLabels.vl  pyramidChart.vl  radialChart.vl
tests/specs/null/: axis1.vl  filter1.vl  filter2.vl  scale0.vl  scale1.vl  scale2.vl  scale3.vl  scale4.vl  scale5.vl
tests/specs/position/: position1.vl  position10.vl  position10r.vl  position11.vl  position11r.vl  position12.vl  position12r.vl  position2.vl  position3.vl  position4.vl  position5.vl  position6.vl  position7.vl  position8.vl  position8r.vl  position9.vl  position9r.vl
tests/specs/projection/: Albers.vl  AzimuthalEqualArea.vl  AzimuthalEquidistant.vl  ConicConformal.vl  ConicEqualArea.vl  ConicEquidistant.vl  EqualEarth.vl  Equirectangular.vl  Gnomonic.vl  Identity.vl  Mercator.vl  NaturalEarth1.vl  Orthographic.vl  Stereographic.vl  TransverseMercator.vl  airy.vl  aitoff.vl  armadillo.vl  august.vl  baker.vl  berghaus.vl  bertin1953.vl  boggs.vl  bonne.vl  bottomley.vl  collignon.vl  configExample.vl  craig.vl  craster.vl  cylindricalequalarea.vl  cylindricalstereographic.vl  eckert1.vl  eckert2.vl  eckert3.vl  eckert4.vl  eckert5.vl  eckert6.vl  eisenlohr.vl  fahey.vl  foucaut.vl  (+6 more)
tests/specs/scale/: axislimit.vl  axisrange.vl  diverging1.vl  diverging2.vl  namedaxisrange.vl  scale1.vl  scale2.vl  scale3.vl  scale4.vl  scale5.vl  scale6.vl  scale7.vl  scale8.vl  scale9.vl
tests/specs/shape/: custom1.vl  custom2.vl  custom3.vl  custom4.vl  defNominal.vl  defOrdinal.vl  isotype1.vl  multi1.vl  multi2.vl  multi3.vl  multi4.vl  multi5.vl  multi6.vl  point1.vl  point2.vl  point3.vl  point4.vl  point5.vl  point6.vl  point7.vl  rounded1.vl  rounded2.vl  rounded3.vl  rounded4.vl  rounded5.vl  rounded6.vl  size1.vl  size2.vl  size3.vl  symbols1.vl  symbols2.vl  windvector.vl
tests/specs/sort/: ascending.vl  custom.vl  descending.vl  stack1.vl  (+1 more)
(+248 files in other folders)
