cabal-version:      3.0
name:               hvega
version:            0.13.0.0
synopsis:           Create Vega-Lite visualizations
description:
  This is based on the elm-vegalite package
  (<http://package.elm-lang.org/packages/gicentre/elm-vegalite/latest>)
  by Jo Wood of the giCentre at the City University of London.

homepage:           https://github.com/DougBurke/hvega
bug-reports:        https://github.com/DougBurke/hvega/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Douglas Burke
maintainer:         dburke.gw@gmail.com
copyright:          2018-2022 Douglas Burke
category:           Graphics
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md
  tests/specs/axis/*.vl
  tests/specs/color/*.vl
  tests/specs/composite/*.vl
  tests/specs/conditional/*.vl
  tests/specs/config/*.vl
  tests/specs/data/*.vl
  tests/specs/fillstroke/*.vl
  tests/specs/gallery/advanced/*.vl
  tests/specs/gallery/area/*.vl
  tests/specs/gallery/bar/*.vl
  tests/specs/gallery/dist/*.vl
  tests/specs/gallery/error/*.vl
  tests/specs/gallery/facet/*.vl
  tests/specs/gallery/geo/*.vl
  tests/specs/gallery/histogram/*.vl
  tests/specs/gallery/interaction/*.vl
  tests/specs/gallery/label/*.vl
  tests/specs/gallery/layer/*.vl
  tests/specs/gallery/line/*.vl
  tests/specs/gallery/multi/*.vl
  tests/specs/gallery/repeat/*.vl
  tests/specs/gallery/scatter/*.vl
  tests/specs/gallery/table/*.vl
  tests/specs/geo/*.vl
  tests/specs/hyperlink/*.vl
  tests/specs/image/*.vl
  tests/specs/interaction/*.vl
  tests/specs/legend/*.vl
  tests/specs/null/*.vl
  tests/specs/position/*.vl
  tests/specs/projection/*.vl
  tests/specs/scale/*.vl
  tests/specs/shape/*.vl
  tests/specs/sort/*.vl
  tests/specs/textformat/*.vl
  tests/specs/time/*.vl
  tests/specs/tooltip/*.vl
  tests/specs/trail/*.vl
  tests/specs/viewcomposition/*.vl
  tests/specs/windowtransform/*.vl

extra-doc-files:
  images/example-betelgeuse.png
  images/example-car.png
  images/vl/baseplot.png
  images/vl/bindscales.png
  images/vl/choroplethlookupfromgeo.png
  images/vl/choroplethlookuptogeo.png
  images/vl/clustercenters.png
  images/vl/combinedplot-selected.png
  images/vl/combinedplot.png
  images/vl/comparecounts.png
  images/vl/comparingerrors.png
  images/vl/concatenatedplot.png
  images/vl/concatenatedplot2.png
  images/vl/concatenatedskyplot.png
  images/vl/contextandfocus.png
  images/vl/coordinatedviews.png
  images/vl/coordinatedviews2.png
  images/vl/crossfilter.png
  images/vl/densitymultiples.png
  images/vl/densityparallax.png
  images/vl/densityparallaxgrouped.png
  images/vl/duplicateaxis.png
  images/vl/errorauto.png
  images/vl/errorband.png
  images/vl/errorbars.png
  images/vl/errorbox.png
  images/vl/errormanual-zoomed.png
  images/vl/errormanual.png
  images/vl/eventselection.png
  images/vl/gmaghistogram.png
  images/vl/gmaghistogramwithcolor.png
  images/vl/gmaglinewithcolor.png
  images/vl/intervalselection.png
  images/vl/intervalselectiony.png
  images/vl/layeredcount.png
  images/vl/layereddiversion.png
  images/vl/layeredplot.png
  images/vl/legendselection.png
  images/vl/loessexample.png
  images/vl/multiselection.png
  images/vl/nearestselection.png
  images/vl/parallaxbreakdown.png
  images/vl/parallaxhistogram.png
  images/vl/parallaxview-selected.png
  images/vl/parallaxview.png
  images/vl/piechart.png
  images/vl/piechartwithcounting.png
  images/vl/pointplot.png
  images/vl/posplot.png
  images/vl/regressionexample.png
  images/vl/repeatplot.png
  images/vl/singleselection.png
  images/vl/skyplot.png
  images/vl/skyplotaitoff.png
  images/vl/skyplotwithgraticules.png
  images/vl/smallmultiples.png
  images/vl/smallmultiples2.png
  images/vl/splomplot.png
  images/vl/starcount.png
  images/vl/starcount2.png
  images/vl/stripplot.png
  images/vl/stripplotwithbackground.png
  images/vl/stripplotwithcolor.png
  images/vl/stripplotwithcolorordinal.png
  images/vl/stripploty.png
  images/vl/transformselection.png
  images/vl/widgetselection.png
  images/vl/yhistogram.png
  images/vl/yloghistogram.png
  images/zindex.png

common common
  default-extensions:

common lib
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common test
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common bench
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages -Wredundant-constraints

common exec
  default-language: Haskell2010
  ghc-options:
    -Wall -Wunused-packages -Wredundant-constraints -threaded -rtsopts
    -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/DougBurke/hvega

library
  hs-source-dirs:   src
  exposed-modules:
    Graphics.Vega.Tutorials.VegaLite
    Graphics.Vega.VegaLite

  other-modules:
    Graphics.Vega.VegaLite.Configuration
    Graphics.Vega.VegaLite.Core
    Graphics.Vega.VegaLite.Data
    Graphics.Vega.VegaLite.Foundation
    Graphics.Vega.VegaLite.Geometry
    Graphics.Vega.VegaLite.Input
    Graphics.Vega.VegaLite.Legend
    Graphics.Vega.VegaLite.Mark
    Graphics.Vega.VegaLite.Output
    Graphics.Vega.VegaLite.Scale
    Graphics.Vega.VegaLite.Selection
    Graphics.Vega.VegaLite.Specification
    Graphics.Vega.VegaLite.Time
    Graphics.Vega.VegaLite.Transform

  build-depends:
    , aeson                 >=0.11 && <2.2
    , base                  >=4.9  && <5
    , text                  >=1.2  && <2.1
    , unordered-containers  >=0.2  && <0.3

  default-language: Haskell2010
  ghc-options:      -Wall

test-suite test
  import:         common, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests/
  main-is:        Test.hs
  other-modules:
    AxisTests
    ColorTests
    CompositeTests
    ConditionalTests
    ConfigTests
    DataTests
    EncodingTests
    FillStrokeTests
    FilterTests
    Gallery.Advanced
    Gallery.Area
    Gallery.Bar
    Gallery.Dist
    Gallery.Error
    Gallery.Facet
    Gallery.Geo
    Gallery.Histogram
    Gallery.Interaction
    Gallery.Label
    Gallery.Layer
    Gallery.Line
    Gallery.Multi
    Gallery.Repeat
    Gallery.Scatter
    Gallery.Table
    GeoTests
    HyperlinkTests
    ImageTests
    InteractionTests
    LegendTests
    MarkTests
    NullTests
    PositionTests
    ProjectionTests
    ScaleTests
    ShapeTests
    SortTests
    TextFormatTests
    TimeTests
    TooltipTests
    TrailTests
    TransformTests
    ViewCompositionTests
    WindowTransformTests

  build-depends:
    , aeson
    , aeson-pretty
    , base          >=4 && <5
    , bytestring
    , containers
    , filepath
    , hvega
    , tasty
    , tasty-golden
    , text
